@@ -28,8 +28,7 @@ OPTIM	= /O2 /Ob2
 OPTIMD	=
 
 CC	= cl
-#CFLAGS	= /W3 /MD /nologo /I. /D_WIN32_WINNT=0x400 /DHAVE_PTW32_CONFIG_H
-CPPFLAGS = /I. /D_WIN32_WINNT=0x400 /DHAVE_PTW32_CONFIG_H
+CPPFLAGS = /I. /DHAVE_PTW32_CONFIG_H
 CFLAGS	= /W3 /MD /nologo
 CFLAGSD	= /Z7 $(CFLAGS)
 
